new colours and navs

--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@
     }
 
     footer {
-        background-color: #140611ef;
+        background-color: #212529;
         color: white;
         text-align: center;
         padding: 2px;
