--- a/style.css
+++ b/style.css
@@ -73,17 +73,17 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         align-items: center;
-        gap: 2rem;
+        gap: 1rem;
     }
 
     section {
-        padding: 0 8%;
+        padding: 0 6%;
     }
 
     .hero-text h5 {
         font-size: 14px;
         font-weight: 400;
-        margin-bottom: 25px;
+        margin-bottom: 15px;
     }
 
     .hero-text h1 {
@@ -156,7 +156,7 @@
 
     .icons i {
         display: block;
-        margin: 26px 0;
+        margin: 25px 0;
         font-size: 24px;
         transition: all 0.5s ease;
     }
@@ -174,7 +174,7 @@
 
     .scroll-down i {
         display: block;
-        padding: 12px;
+        padding: 10px;
         font-size: 25px;
         background-color: #21383d;
         border-radius: 30px;
@@ -193,7 +193,7 @@
         }
 
         .hero-text {
-            padding-top: 0;
+            padding-top: 5px;
         }
 
         .hero-img {
@@ -277,14 +277,11 @@
     .hero h1,
     h4,
     h5,
-    p
-    {
-    text-align: center;
+    p {
+        text-align: center;
     }
 
     .hero-text a {
         display: flex;
         justify-content: center;
     }
-
-    
